# daily-checkin-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
deploy/: checkin-bot.service
docs/: USER_GUIDE.md  activitywatch-setup.md  sheet_header.txt
plans/: garmin-integration.md  screen-time-v1b.md
scripts/: garmin_login.py  import_check.py  install_screen_logger.sh  screen_logger.py
src/: analytics.py  archive.py  config.py  date_parsing.py  gemini.py  hydration.py  main.py  monitoring.py  prompts.py  scheduler.py  sheets.py  state.py  telegram_handlers.py  time_util.py  weather.py
